Fixed input validation bugs reported by the team.

--- a/Ocean2Ocean.Mvc/Views/Home/Leaderboard.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/Leaderboard.cshtml
@@ -239,7 +239,7 @@
             </div>
         }
     }
-    <a class="btn btn-primary" href="/@Model?.DailyRankings?.FirstOrDefault()?.JourneyName">
+    <a class="btn btn-primary" href="/@Model?.JourneyRankings?.FirstOrDefault()?.JourneyName">
         🗺️ Return to the Map
     </a>
 </div>
